# fastapi_crud

./: README.md  pyproject.toml  run.py  test.db
app/: db.py  routes.py
